updated readMe, in CSS - edited colors, buttons,and fixed  spacing issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ h2, h3, h4 {
 } 
 h4 {
     font-size: 20px;
-    margin-bottom: 5px;
+    margin-bottom: 15px;
 }
 
 /* text & list styling-------------------------------- */
@@ -59,7 +59,8 @@ nav {margin: 10px 15px 2px 15px;
     display: inline-block;
     padding: 1rem;
 }
-li {
+li,
+.dinnerEst {
     margin: 5px 10px;
     justify-content: space-around;
 }
